# mail-classifier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.claude/: settings.local.json
backend/: pyproject.toml
backend/app/: config.py  history.py  llm.py  models.py  people.py  server.py  storage.py
backend/app/pipeline/: classifier.py  correlator.py  drafter.py  extractor.py  normalizer.py  orchestrator.py  verifier.py
backend/app/prompts/: classifier.py  correlator.py  drafter.py  extractor.py  verifier.py
backend/tests/: conftest.py  test_api.py  test_classifier.py  test_normalizer.py  test_pipeline.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Briefing.tsx  FlagList.tsx  TriageList.tsx
frontend/src/lib/: api.ts
